src/parser/QueryParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. QueryParser.java */
package parser;

/** An Query Grammar. */
public class QueryParser/*@bgen(jjtree)*/implements QueryParserTreeConstants, QueryParserConstants {/*@bgen(jjtree)*/
  protected static JJTQueryParserState jjtree = new JJTQueryParserState();
  /** Main entry point. */
  public static void main(String args[]) {
    System.out.println("Reading from standard input...");
    QueryParser t = new QueryParser(System.in);
    try {
      ASTStart n = t.Start();
      n.dump(">");
      System.out.println("Thank you.");
    } catch (Exception e) {
      System.out.println("Oops.");
      System.out.println(e.getMessage());
      e.printStackTrace();
    }
  }

/** Main production. */
  static final public ASTStart Start() throws ParseException {
                    /*@bgen(jjtree) Start */
  ASTStart jjtn000 = new ASTStart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Seek();
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

/** Query */
  static final public void Seek() throws ParseException {
                    /*@bgen(jjtree) seek */
  ASTseek jjtn000 = new ASTseek(JJTSEEK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SEEKING);
      Job();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** Job() */
  static final public void Job() throws ParseException {
    if (jj_2_2(2147483647)) {
          ASTJobOr jjtn001 = new ASTJobOr(JJTJOBOR);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
      try {
        JobPrime();
        label_1:
        while (true) {
          JobTemp();
          if (jj_2_1(1)) {
            ;
          } else {
            break label_1;
          }
        }
      } catch (Throwable jjte001) {
          if (jjtc001) {
            jjtree.clearNodeScope(jjtn001);
            jjtc001 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte001 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte001;}
          }
          if (jjte001 instanceof ParseException) {
            {if (true) throw (ParseException)jjte001;}
          }
          {if (true) throw (Error)jjte001;}
      } finally {
          if (jjtc001) {
            jjtree.closeNodeScope(jjtn001, true);
          }
      }
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case A:
        JobPrime();
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void JobTemp() throws ParseException {
    if ((getToken(1).kind == OR)) {

    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(OR);
    Job();
  }

/** JobPrime() */
  static final public void JobPrime() throws ParseException {
                        /*@bgen(jjtree) Job */
  ASTJob jjtn000 = new ASTJob(JJTJOB);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_3(2147483647)) {
        Title();
        CAS();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case A:
          Title();
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** CAS() */
  static final public void CAS() throws ParseException {
    if (jj_2_4(2147483647)) {
      AS();
    } else if (jj_2_5(2147483647)) {
      Company();
      AS();
    } else if (jj_2_6(2147483647)) {
      Company();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WITH:
        Salary();
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

/** AS() */
  static final public void AS() throws ParseException {
    if (jj_2_7(2147483647)) {
      Area();
      Salary();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IN:
      case AROUND:
      case PREFERABLY:
        Area();
        break;
      case WITH:
        Salary();
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

/** Title() */
  static final public void Title() throws ParseException {
                       /*@bgen(jjtree) title */
                       ASTtitle jjtn000 = new ASTtitle(JJTTITLE);
                       boolean jjtc000 = true;
                       jjtree.openNodeScope(jjtn000);Token t;
    try {
      jj_consume_token(A);
      t = jj_consume_token(TITLE);
                         jjtn000.title = t.image;
      jj_consume_token(POSITION);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** Company() */
  static final public void Company() throws ParseException {
                           /*@bgen(jjtree) company */
  ASTcompany jjtn000 = new ASTcompany(JJTCOMPANY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_8(3)) {
          ASTpreferableCompany jjtn001 = new ASTpreferableCompany(JJTPREFERABLECOMPANY);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
        try {
          jj_consume_token(PREFERABLY);
        } finally {
          if (jjtc001) {
            jjtree.closeNodeScope(jjtn001, true);
          }
        }
        jj_consume_token(IN);
        CompanyType();
      } else if (jj_2_9(3)) {
          ASTpreferableCompany jjtn002 = new ASTpreferableCompany(JJTPREFERABLECOMPANY);
          boolean jjtc002 = true;
          jjtree.openNodeScope(jjtn002);
        try {
          jj_consume_token(PREFERABLY);
        } finally {
          if (jjtc002) {
            jjtree.closeNodeScope(jjtn002, true);
          }
        }
        jj_consume_token(IN);
        CompanyName();
      } else if (jj_2_10(2)) {
        jj_consume_token(IN);
        CompanyType();
      } else if (jj_2_11(2)) {
        jj_consume_token(IN);
        CompanyName();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** CompanyName() */
  static final public void CompanyName() throws ParseException {
    if (jj_2_13(2147483647)) {
          ASTCompanyNameOr jjtn001 = new ASTCompanyNameOr(JJTCOMPANYNAMEOR);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
      try {
        CompanyNamePrime();
        label_2:
        while (true) {
          CompanyNameTemp();
          if (jj_2_12(2147483647)) {
            ;
          } else {
            break label_2;
          }
        }
      } catch (Throwable jjte001) {
          if (jjtc001) {
            jjtree.clearNodeScope(jjtn001);
            jjtc001 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte001 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte001;}
          }
          if (jjte001 instanceof ParseException) {
            {if (true) throw (ParseException)jjte001;}
          }
          {if (true) throw (Error)jjte001;}
      } finally {
          if (jjtc001) {
            jjtree.closeNodeScope(jjtn001, true);
          }
      }
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMPANYNAME:
        CompanyNamePrime();
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

/** CompanyNameTemp() */
  static final public void CompanyNameTemp() throws ParseException {
    jj_consume_token(OR);
    CompanyName();
  }

/** CompanyNamePrime() */
  static final public void CompanyNamePrime() throws ParseException {
                                        /*@bgen(jjtree) CompanyName */
                                        ASTCompanyName jjtn000 = new ASTCompanyName(JJTCOMPANYNAME);
                                        boolean jjtc000 = true;
                                        jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(COMPANYNAME);
                           jjtree.closeNodeScope(jjtn000, true);
                           jjtc000 = false;
                           jjtn000.companyName = t.image;
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** CompanyType() */
  static final public void CompanyType() throws ParseException {
    if (jj_2_15(2147483647)) {
          ASTCompanyTypeOr jjtn001 = new ASTCompanyTypeOr(JJTCOMPANYTYPEOR);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
      try {
        CompanyTypePrime();
        label_3:
        while (true) {
          CompanyTypeTemp();
          if (jj_2_14(2147483647)) {
            ;
          } else {
            break label_3;
          }
        }
      } catch (Throwable jjte001) {
          if (jjtc001) {
            jjtree.clearNodeScope(jjtn001);
            jjtc001 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte001 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte001;}
          }
          if (jjte001 instanceof ParseException) {
            {if (true) throw (ParseException)jjte001;}
          }
          {if (true) throw (Error)jjte001;}
      } finally {
          if (jjtc001) {
            jjtree.closeNodeScope(jjtn001, true);
          }
      }
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMPANYTYPE:
        CompanyTypePrime();
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

/** CompanyTypeTemp() */
  static final public void CompanyTypeTemp() throws ParseException {
    jj_consume_token(OR);
    CompanyType();
  }

/** CompanyTypePrime() */
  static final public void CompanyTypePrime() throws ParseException {
                                        /*@bgen(jjtree) CompnayType */
                                        ASTCompnayType jjtn000 = new ASTCompnayType(JJTCOMPNAYTYPE);
                                        boolean jjtc000 = true;
                                        jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(COMPANYTYPE);
                            jjtree.closeNodeScope(jjtn000, true);
                            jjtc000 = false;
                            jjtn000.companyType = t.image;
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** Area() */
  static final public void Area() throws ParseException {
                     /*@bgen(jjtree) area */
  ASTarea jjtn000 = new ASTarea(JJTAREA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_16(2)) {
          ASTpreferableArea jjtn001 = new ASTpreferableArea(JJTPREFERABLEAREA);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
        try {
          jj_consume_token(PREFERABLY);
        } finally {
          if (jjtc001) {
            jjtree.closeNodeScope(jjtn001, true);
          }
        }
        inArea();
      } else if (jj_2_17(2)) {
          ASTpreferableArea jjtn002 = new ASTpreferableArea(JJTPREFERABLEAREA);
          boolean jjtc002 = true;
          jjtree.openNodeScope(jjtn002);
        try {
          jj_consume_token(PREFERABLY);
        } finally {
          if (jjtc002) {
            jjtree.closeNodeScope(jjtn002, true);
          }
        }
        aroundArea();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IN:
          inArea();
          break;
        case AROUND:
          aroundArea();
          break;
        default:
          jj_la1[6] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** inArea() */
  static final public void inArea() throws ParseException {
                         /*@bgen(jjtree) inArea */
  ASTinArea jjtn000 = new ASTinArea(JJTINAREA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IN);
      AreaName();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** aroundArea() */
  static final public void aroundArea() throws ParseException {
                                 /*@bgen(jjtree) aroundArea */
  ASTaroundArea jjtn000 = new ASTaroundArea(JJTAROUNDAREA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(AROUND);
      AreaName();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** AreaName() */
  static final public void AreaName() throws ParseException {
    if (jj_2_19(2147483647)) {
          ASTAreaNameOr jjtn001 = new ASTAreaNameOr(JJTAREANAMEOR);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
      try {
        AreaNamePrime();
        label_4:
        while (true) {
          AreaNameTemp();
          if (jj_2_18(2147483647)) {
            ;
          } else {
            break label_4;
          }
        }
      } catch (Throwable jjte001) {
          if (jjtc001) {
            jjtree.clearNodeScope(jjtn001);
            jjtc001 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte001 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte001;}
          }
          if (jjte001 instanceof ParseException) {
            {if (true) throw (ParseException)jjte001;}
          }
          {if (true) throw (Error)jjte001;}
      } finally {
          if (jjtc001) {
            jjtree.closeNodeScope(jjtn001, true);
          }
      }
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AREANAME:
        AreaNamePrime();
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

/** AreaNameTemp() */
  static final public void AreaNameTemp() throws ParseException {
    jj_consume_token(OR);
    AreaName();
  }

/** AreaNamePrime() */
  static final public void AreaNamePrime() throws ParseException {
                                  /*@bgen(jjtree) AreaName */
                                  ASTAreaName jjtn000 = new ASTAreaName(JJTAREANAME);
                                  boolean jjtc000 = true;
                                  jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(AREANAME);
                         jjtree.closeNodeScope(jjtn000, true);
                         jjtc000 = false;
                         jjtn000.areaName = t.image;
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** Salary() */
  static final public void Salary() throws ParseException {
                        Token t;
    jj_consume_token(WITH);
    jj_consume_token(A);
    jj_consume_token(SALARY);
    jj_consume_token(OF);
                                   ASTsalary jjtn001 = new ASTsalary(JJTSALARY);
                                   boolean jjtc001 = true;
                                   jjtree.openNodeScope(jjtn001);
    try {
      t = jj_consume_token(SALARYAMOUNT);
                                                       jjtree.closeNodeScope(jjtn001, true);
                                                       jjtc001 = false;
                                                       jjtn001.salary = t.image;
    } finally {
                                   if (jjtc001) {
                                     jjtree.closeNodeScope(jjtn001, true);
                                   }
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_3R_37() {
    if (jj_3R_18()) return true;
    return false;
  }

  static private boolean jj_3R_42() {
    if (jj_3R_6()) return true;
    return false;
  }

  static private boolean jj_3R_5() {
    jj_lookingAhead = true;
    jj_semLA = (getToken(1).kind == OR);
    jj_lookingAhead = false;
    if (!jj_semLA || jj_3R_23()) return true;
    if (jj_scan_token(OR)) return true;
    if (jj_3R_26()) return true;
    return false;
  }

  static private boolean jj_3R_45() {
    if (jj_3R_15()) return true;
    return false;
  }

  static private boolean jj_3R_36() {
    if (jj_3R_18()) return true;
    Token xsp;
    if (jj_3R_46()) return true;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_46()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_13() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_36()) {
    jj_scanpos = xsp;
    if (jj_3R_37()) return true;
    }
    return false;
  }

  static private boolean jj_3R_41() {
    if (jj_3R_6()) return true;
    Token xsp;
    if (jj_3_1()) return true;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_1()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_26() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_41()) {
    jj_scanpos = xsp;
    if (jj_3R_42()) return true;
    }
    return false;
  }

  static private boolean jj_3R_16() {
    if (jj_scan_token(COMPANYNAME)) return true;
    return false;
  }

  static private boolean jj_3_13() {
    if (jj_3R_16()) return true;
    if (jj_3R_15()) return true;
    return false;
  }

  static private boolean jj_3R_15() {
    if (jj_scan_token(OR)) return true;
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3_18() {
    if (jj_3R_21()) return true;
    return false;
  }

  static private boolean jj_3R_39() {
    if (jj_3R_16()) return true;
    return false;
  }

  static private boolean jj_3R_38() {
    if (jj_3R_16()) return true;
    Token xsp;
    if (jj_3R_45()) return true;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_45()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_14() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_38()) {
    jj_scanpos = xsp;
    if (jj_3R_39()) return true;
    }
    return false;
  }
